# cellular_automata

./: .gitignore  CMakeLists.txt  project_build.sh
in/: gnuplot_graphs.txt
src/: automata.c  automata.h  game_of_life.c  game_of_life_1.c  game_of_life_2.c  game_of_life_2_corretto.c  game_of_life_conway.c  game_of_life_perturbed.c  game_of_life_princ.c  gnuplot_instructions.txt  life.c  life.h  life1.c  main.c  rule_30_90_110_150.c  rule_90_150.c  utils.c  utils.h
